fix(video-player): fix styling to align image with video player size

--- a/packages/styles/scss/components/video-player/_video-player.scss
+++ b/packages/styles/scss/components/video-player/_video-player.scss
@@ -28,6 +28,18 @@
         display: block;
         margin-top: 56.25%;
       }
+
+      button {
+        border: none;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+
+        .#{$prefix}--image {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
 
     &__video-caption {
